# Crunch

./: .gitignore  CMakeLists.txt  \  build.sh  deps.sh  run.sh
include/: grid.hpp  logs.hpp  mouse.hpp  sidebar.hpp  window.hpp
include/core/: grid.hpp  mouse.hpp  sidebar.hpp  window.hpp
include/definitions/: gridvars.hpp  sidebarvars.hpp
include/helpers/: mouseContentToString.hpp  mouseHoverToString.hpp
include/logs/: mouseLogs.hpp
src/: main.cpp
src/core/: grid.cpp  main.cpp  mouse.cpp  sidebar.cpp  window.cpp
src/grid/: constructor.cpp  draw.cpp  setTexture.cpp  update.cpp
src/helpers/: mouseContentToString.cpp  mouseHoverToString.cpp
src/logs/: mouseLogs.cpp
src/mouse/: checkHover.cpp  update.cpp
src/sidebar/: constructor.cpp  draw.cpp  update.cpp
src/window/: constructor.cpp  display.cpp
